; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_test.c_stub_state_push_map.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_test.c_stub_state_push_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stub_state = type { i64, i32* }

@.str = private unnamed_addr constant [2 x i8] c"{\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stub_state*, i32)* @stub_state_push_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stub_state_push_map(%struct.stub_state* %0, i32 %1) #0 {
  %3 = alloca %struct.stub_state*, align 8
  %4 = alloca i32, align 4
  store %struct.stub_state* %0, %struct.stub_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %6 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = add i64 %7, 1
  store i64 %8, i64* %6, align 8
  %9 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %10 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %13 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  store i32 1, i32* %15, align 4
  %16 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %17 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* %17, align 8
  %20 = load i32, i32* %4, align 4
  %21 = mul nsw i32 %20, 2
  %22 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %23 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.stub_state*, %struct.stub_state** %3, align 8
  %26 = getelementptr inbounds %struct.stub_state, %struct.stub_state* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = getelementptr inbounds i32, i32* %24, i64 %27
  store i32 %21, i32* %28, align 4
  %29 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
